--- a/aula3.ipynb
+++ b/aula3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "aula3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMefan+e3aodPpVf6315rcs",
+      "authorship_tag": "ABX9TyPDG0u+71FOwL4cNNOr4fhI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,17 +29,39 @@
       "metadata": {
         "id": "CrjZH1UmcdCe",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "aca64353-dbb1-4fd4-eb24-e638b83134bc"
       },
       "source": [
         "# Aula - Ep. #03 - Curso de #IP\n",
         "# Operadores Aritiméticos em Python\n",
         "# Github do mini curso: https://github.com/clovesrocha/minicursoip\n",
-        "#ruanluciano\n",
+        "\n",
+        "# + \n",
+        "# -\n",
+        "# *\n",
+        "# /\n",
+        "# **\n",
+        "# //\n",
+        "# %\n",
+        "\n",
+        "# c = 2**3\n",
+        "# print(r)\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "8\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
