--- a/aula3.ipynb
+++ b/aula3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "aula3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPDG0u+71FOwL4cNNOr4fhI",
+      "authorship_tag": "ABX9TyPKpzfp/Rapumx0HAm6/B2q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "aca64353-dbb1-4fd4-eb24-e638b83134bc"
+        "outputId": "7e40659f-ded8-4a90-db4d-b0bdd7a6e1af"
       },
       "source": [
         "# Aula - Ep. #03 - Curso de #IP\n",
@@ -48,16 +48,22 @@
         "# //\n",
         "# %\n",
         "\n",
-        "# c = 2**3\n",
-        "# print(r)\n",
-        "\n"
+        "#c = 2**3\n",
+        "#print(r)\n",
+        "#r = 10//3\n",
+        "#print(r)\n",
+        "#r = 10%3\n",
+        "#print(r)\n",
+        "#c = 3*3\n",
+        "#print(c)\n",
+        "#ruanluciano"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "8\n"
+            "9\n"
           ],
           "name": "stdout"
         }
